feat(tui): TAO 四段式布局 v3.1 + PPAO 实时事件流
实现 TAO（Think-Action-Observe）四段式终端布局，替代原有单一
ThoughtComponent 的混合渲染方式。

新增组件:
- InputBlockComponent — 顶部输入内容区，深色底 ANSI 236，纯用户输入
- ThinkBlockComponent — 思考推理区，亮色底 ANSI 255，┈ Step N ┈ 标记
- ActionBlockComponent — 动作命令区，深色底同 InputBlock，$ cmd (timeout 120s)
- ObserveBlockComponent — 观察输出区，终端深色底 ANSI 234，rawData + Took X.XXs

核心变更:
- AgentExecutor: 新增 PPAOEvent record + onPPAOEvent consumer，在 Micro-ReAct
  循环的 dispatchLlmInference/dispatchToolCall 三点发射 thought/action/observe
- AliceTuiLauncher.hookAgentEvents(): PPAO consumer 将事件实时转发到 EventBridge，
  跟踪 lastAction 与 observe 配对形成完整执行流
- ScreenManager: 双重复显示修复（StartThinking 不再重复写入 InputBlock），
  ChatMessage(User) 路由至 ThinkBlock 作为对话历史
- TuiLayout: 7 组件布局，FIXED_ROWS=6，ThinkBlock 45% / ObserveBlock 55%
- AgentExecutor observe 使用 rawData 而非 summary，去除 Tool [X] returned: 前缀
- 64 测试全通过（alice-facade-tui）

文档:
- docs/alice-facade-tui/Layout_TAO.md 更新为四段式 v3.1 规格